fix titles align on tuto submission

--- a/client/src/components/Tutorial-step/styles.styl
+++ b/client/src/components/Tutorial-step/styles.styl
@@ -1,6 +1,6 @@
 .tutorial-step
   display block
-  margin 0
+  margin-top 15%
   width 100%
   height 100%
   transition: all 0.5s ease-out
@@ -15,9 +15,8 @@
 
   &__title
     color $color-grey-dark
-    position absolute
     width 70%
-    bottom 15vh
+    // bottom 15vh
     center-x()
   &__index
     color $color-grey-index
@@ -27,6 +26,6 @@
     margin-top 37px
 
   .video-tuto
-    // width 70%
-    center-x()
+    display block
+    margin 0 auto
     top 5vh
